--- a/ship.html
+++ b/ship.html
@@ -157,10 +157,12 @@
 			//container.setAttribute('onclick','onSkinNavButtonClick(\'' + JSON.stringify(data.skin[x]) + '\')');
 			if (firstIteration){
 				container.src = data.expression[x].icon;
+				container.className = "btnExpr btnExprActive";
 				firstIteration = false;
 				//initial = JSON.stringify(data.skin[x]);
 			} else {
 				container.src = data.expression[x].icon;
+				container.className = "btnExpr";
 			}
 			
 			document.getElementById('shipSkinExpressions').appendChild(container);
