--- a/ship.html
+++ b/ship.html
@@ -561,7 +561,7 @@
 <!-- Skins -->
 <table class="wikitablewide" style="width:100%;text-align:center">
 	<tr>
-		<td colspan="2"  style="background:#000000" id="shipRarityColor3">
+		<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor3">
 			<b>
 				<font style="vertical-align: inherit;">
 					<font style="vertical-align: inherit;">Skins</font>
@@ -577,7 +577,7 @@
 		<td rowspan="3"style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b" id="shipSkinName"></td>
+					<td style="background:#262f3b;height:30px" id="shipSkinName"></td>
 				</tr>
 				<tr>
 					<td> 
@@ -589,7 +589,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0">
 				<tr>
-					<td style="background:#262f3b">Description</td>
+					<td style="background:#262f3b;height:30px">Description</td>
 				</tr>
 				<tr>
 					<td style="text-align:left;padding:10px;">
@@ -603,7 +603,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b">SD</td>
+					<td style="background:#262f3b;height:30px">SD</td>
 				</tr>
 				<tr>
 					<td>
@@ -618,7 +618,7 @@
 		<td style="width:50%;height:1px;">
 			<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
 				<tr>
-					<td style="background:#262f3b">Expressions</td>
+					<td style="background:#262f3b;height:30px">Expressions</td>
 				</tr>
 				<tr>
 					<td id="shipSkinExpressions" >
