--- a/ship.html
+++ b/ship.html
@@ -279,10 +279,10 @@
 
 <!-- General Info -->
 
-<table class="wikitable" style="width:100%;text-align:center;word-break:break-word">
+<table class="wikitable wikitable-a" style="width:100%;text-align:center;word-break:break-word">
 	<tbody>
 		<tr>
-			<td colspan="5" style="background:#000000" id="shipRarityColor">
+			<td colspan="5" style="background:#000000;height:30px" id="shipRarityColor">
 				<b>
 					<font style="vertical-align: inherit;">
 						<font style="vertical-align: inherit;" id="shipHeader"></font>
@@ -432,10 +432,10 @@
 
 <!-- Misc Info -->
 
-<table class="wikitable" style="width:100%;text-align:center">
+<table class="wikitable wikitable-a" style="width:100%;text-align:center">
 	<tbody>
 			<tr>
-				<td colspan="2"  style="background:#000000" id="shipRarityColor2">
+				<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor2">
 					<b>
 						<font style="vertical-align: inherit;">
 							<font style="vertical-align: inherit;">Information</font>
@@ -472,7 +472,7 @@
 				</td>
 			</tr>
 			<tr>
-				<td colspan="2" style="background:#262f3b">
+				<td colspan="2" style="background:#262f3b;height:30px">
 					<b>
 						<font style="vertical-align: inherit;">
 							<font style="vertical-align: inherit;">Illustrator</font>
