--- a/ship.html
+++ b/ship.html
@@ -279,7 +279,7 @@
 
 <!-- General Info -->
 
-<table class="wikitable wikitable-a" style="width:100%;text-align:center;word-break:break-word">
+<table class="wikitable" style="width:100%;text-align:center;word-break:break-word">
 	<tbody>
 		<tr>
 			<td colspan="5" style="background:#000000;height:30px" id="shipRarityColor">
@@ -432,7 +432,7 @@
 
 <!-- Misc Info -->
 
-<table class="wikitable wikitable-a" style="width:100%;text-align:center">
+<table class="wikitable" style="width:100%;text-align:center">
 	<tbody>
 			<tr>
 				<td colspan="2"  style="background:#000000;height:30px" id="shipRarityColor2">
