--- a/ship.html
+++ b/ship.html
@@ -90,9 +90,9 @@
 	
 	function setShipRarityHighlight(rarity){
 		if (rarity == "Super Rare") {
-			document.getElementById("shipRarityColor").style = "background:#AEAB66";
-			document.getElementById("shipRarityColor2").style = "background:#AEAB66";
-			document.getElementById("shipRarityColor3").style = "background:#AEAB66";
+			document.getElementById("shipRarityColor").style = "background:#AEAB66;height:30px";
+			document.getElementById("shipRarityColor2").style = "background:#AEAB66;height:30px";
+			document.getElementById("shipRarityColor3").style = "background:#AEAB66;height:30px";
 		}
 	}
 	
