--- a/ship.html
+++ b/ship.html
@@ -132,6 +132,7 @@
 				if (child[j].id == id) {
 					document.getElementById(id).className = 'btnOverlay activeButton';
 					loadShipSkinElements(skin);
+					console.log(id);
 				} else if (child[j].id != id && identifier == "ovr_"){
 					document.getElementById(child[j].id).className = 'btnOverlay';
 				}
