--- a/ship.html
+++ b/ship.html
@@ -137,7 +137,7 @@
 					console.log(id + " converted to active");
 				} else if (child[j].id != id && identifier == "ovr_"){
 					document.getElementById(child[j].id).className = 'btnOverlay';
-					console.log(child[j].id) + " converted to inactive");
+					console.log(child[j].id + " converted to inactive");
 				}
 			}			
 		}
