--- a/ship.html
+++ b/ship.html
@@ -125,6 +125,7 @@
 		var id = "ovr_"+skin.id;
 		var obj = document.getElementById('shipSkinNav').children;
 		
+		console.log(rawskin);
 		for (i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
 			console.log("container " + i);
