--- a/ship.html
+++ b/ship.html
@@ -125,7 +125,7 @@
 		var id = "ovr_"+skin.id;
 		var obj = document.getElementById('shipSkinNav').children;
 		
-		console.log(raw_skin);
+		console.log(obj);
 		for (i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
 			console.log("container " + i);
