--- a/ship.html
+++ b/ship.html
@@ -126,6 +126,7 @@
 		var obj = document.getElementById('shipSkinNav').children;
 		
 		console.log(obj);
+		console.log(obj.length);
 		for (i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
 			console.log("container " + i);
