--- a/ship.html
+++ b/ship.html
@@ -141,7 +141,8 @@
 					document.getElementById(child[j].id).className = 'btnOverlay';
 					console.log(child[j].id + " converted to inactive");
 				}
-			}			
+			}	
+			console.log(i < obj.length);
 		}
 	}
 	
