--- a/ship.html
+++ b/ship.html
@@ -142,7 +142,7 @@
 					console.log(child[j].id + " converted to inactive");
 				}
 			}	
-			console.log(obj.length);
+			console.log((i < obj.length)+"");
 		}
 	}
 	
