--- a/ship.html
+++ b/ship.html
@@ -127,7 +127,7 @@
 		
 		console.log(obj);
 		console.log(obj.length);
-		for (i = 0; i < obj.length; ++i){
+		for (var i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
 			console.log("container " + i);
 			for (j = 0; j < child.length; ++j){
