--- a/ship.html
+++ b/ship.html
@@ -125,32 +125,20 @@
 		var id = "ovr_"+skin.id;
 		var obj = document.getElementById('shipSkinNav').children;
 		
-		console.log(obj);
-		console.log(obj.length);
 		for (var i = 0; i < obj.length; ++i){
 			var child = obj[i].children;
-			console.log("container " + i);
-			for (j = 0; j < child.length; ++j){
+			for (var j = 0; j < child.length; ++j){
 				var identifier = child[j].id.substring(0,4);
-				console.log(child[j].id + ", " + identifier);
 				if (child[j].id == id) {
 					document.getElementById(id).className = 'btnOverlay activeButton';
 					loadShipSkinElements(skin);
-					console.log(id + " converted to active");
 				} else if (child[j].id != id && identifier == "ovr_"){
 					document.getElementById(child[j].id).className = 'btnOverlay';
-					console.log(child[j].id + " converted to inactive");
 				}
 			}	
-			console.log((i < obj.length)+" "+i);
 		}
 	}
 	
-	//image
-	//ovr
-	
-	//image
-	//ovr
 	
 	function loadShipSkinElements(skin){
 		document.getElementById("shipSkinDesc").innerHTML = skin.description;
@@ -196,7 +184,7 @@
 		var id = "expr_"+expr.id;
 		var obj = document.getElementById('shipSkinExpressions').children;
 		
-		for (i = 0; i < obj.length; ++i){
+		for (var i = 0; i < obj.length; ++i){
 			if (obj[i].id == id) {
 				document.getElementById(id).className = 'btnExpr btnExprActive';
 				loadShipSkinExpressionElements(expr);
