--- a/ship.html
+++ b/ship.html
@@ -396,8 +396,8 @@
 							</b>
 						</td>
 						<td colspan="4">
-								<font style="vertical-align: inherit;" id="shipAcquisition">
-										<font style="text-align:left;vertical-align: inherit;"></font>
+								<font style="text-align:left;vertical-align: inherit;" id="shipAcquisition">
+										
 								</font>
 						</td>
 					</tr>
