--- a/ship.html
+++ b/ship.html
@@ -395,8 +395,8 @@
 								</font>
 							</b>
 						</td>
-						<td colspan="4">
-								<font style="text-align:left;vertical-align: inherit;" id="shipAcquisition">
+						<td colspan="4" style="text-align:left;">
+								<font style="vertical-align: inherit;" id="shipAcquisition">
 										
 								</font>
 						</td>
