--- a/ship.html
+++ b/ship.html
@@ -395,7 +395,7 @@
 								</font>
 							</b>
 						</td>
-						<td colspan="4" style="text-align:left;">
+						<td colspan="4">
 								<font style="vertical-align: inherit;" id="shipAcquisition">
 										
 								</font>
@@ -405,15 +405,11 @@
 					<tr>
 						<td style="padding-left: 0px;padding-right: 0px">
 							<b>
-								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Enhance Income</font>
-								</font>
+								<font style="vertical-align: inherit;">Enhance Income</font>
 							</b>
 						</td>
-						<td colspan="4">
-							<font style="vertical-align: inherit;">
-								<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>
-							</font>
+						<td colspan="4" style="text-align:left;padding:10px 10px 10px 10px;">
+							<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>
 						</td>
 					</tr>
 					<tr>
