--- a/ship.html
+++ b/ship.html
@@ -291,143 +291,104 @@
 		<tr>
 			<td colspan="5" style="background:#000000;height:30px" id="shipRarityColor">
 				<b>
-					<font style="vertical-align: inherit;">
-						<font style="vertical-align: inherit;" id="shipHeader"></font>
-					</font>
+					<font style="vertical-align: inherit;" id="shipHeader"></font>
 				</b>
 			</td>
 		</tr>
 		<tr>
 			<td style="width:20%;text-align:center" rowspan="3">
 				<img width="100" height="100" id="shipIcon">
-				</td>
-				<td style="width:20%">
-					<b>
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;">Ship ID</font>
-						</font>
-					</b>
-				</td>
-				<td style="width:20%">
+			</td>
+			<td style="width:20%">
+				<b>
+					<font style="vertical-align: inherit;">Ship ID</font>
+				</b>
+			</td>
+			<td style="width:20%">
+				<font style="vertical-align: inherit;">NO. </font>
+				<font style="vertical-align: inherit;" id="shipID"></font>
+			</td>
+			<td style="width:20%;padding-left: 0px;padding-right: 0px;">
+				<b>
+					<font style="vertical-align: inherit;">Star Rating</font>
+				</b>
+			</td>
+			<td style="width:20%">
+				<font style="vertical-align: inherit;" id="shipStarRating"></font>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Hull</font>
+				</b>
+			</td>
+			<td style="padding-left: 0px;padding-right: 0px;">
+				<img width="30" height="19" id="shipHullIcon">
+				<font style="vertical-align: inherit;"  id="shipHull"></font>
+			</td>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Rarity</font>
+				</b>
+			</td>
+			<td>
+				<font style="vertical-align: inherit;" id="shipRarity"></font>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<b>
 					<font style="vertical-align: inherit;">
-						<font style="vertical-align: inherit;">NO. </font>
+						<font style="vertical-align: inherit;">Navy</font>
 					</font>
-					<span id="PNN">
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;" id="shipID"></font>
-						</font>
-					</span>
-				</td>
-				<td style="width:20%;padding-left: 0px;padding-right: 0px;">
-					<b>
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;">Star Rating</font>
-						</font>
-					</b>
-				</td>
-				<td style="width:20%">
-					<font style="vertical-align: inherit;">
-						<font style="vertical-align: inherit;" id="shipStarRating"></font>
-					</font>
-				</td>
-			</tr>
-			<tr>
-				<td>
-					<b>
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;">Hull</font>
-						</font>
-					</b>
-				</td>
-				<td style="padding-left: 0px;padding-right: 0px;">
-					<a href="/blhx/%E5%88%86%E7%B1%BB:%E8%88%AA%E6%AF%8D" target="_blank">
-						<img width="30" height="19" id="shipHullIcon">
-						</a>
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;"  id="shipHull"></font>
-						</font>
-					</td>
-					<td>
-						<b>
-							<font style="vertical-align: inherit;">
-								<font style="vertical-align: inherit;">Rarity</font>
-							</font>
-						</b>
-					</td>
-					<td>
-						<font style="vertical-align: inherit;">
-							<font style="vertical-align: inherit;" id="shipRarity"></font>
-						</font>
-					</td>
-				</tr>
-				<tr>
-					<td>
-						<b>
-							<font style="vertical-align: inherit;">
-								<font style="vertical-align: inherit;">Navy</font>
-							</font>
-						</b>
-					</td>
-					<td style="padding-left: 0px;padding-right: 0px;background:#">
-							<img width="30" height="30" id="shipNavyIcon">
-							<font style="vertical-align: inherit;">
-								<font style="vertical-align: inherit;" id="shipNavy"></font>
-							</font>
-						</td>
-						<td>
-							<b>
-								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Build Time</font>
-								</font>
-							</b>
-						</td>
-						<td>
-								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;" id="shipBuildTime"></font>
-								</font>
-						</td>
-					</tr>
-					<tr>
-						<td>
-							<b>
-								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Acquisition</font>
-								</font>
-							</b>
-						</td>
-						<td colspan="4">
-								<font style="vertical-align: inherit;" id="shipAcquisition">
-										
-								</font>
-						</td>
-					</tr>
-					
-					<tr>
-						<td style="padding-left: 0px;padding-right: 0px">
-							<b>
-								<font style="vertical-align: inherit;">Enhance Income</font>
-							</b>
-						</td>
-						<td colspan="4" style="text-align:left;padding:10px 10px 10px 10px;">
-							<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>
-						</td>
-					</tr>
-					<tr>
-						<td style="padding-left: 0px;padding-right: 0px">
-							<b>
-								<font style="vertical-align: inherit;">
-									<font style="vertical-align: inherit;">Scrap Income</font>
-								</font>
-							</b>
-						</td>
-						<td colspan="4">
-							<font style="vertical-align: inherit;">
-								<font style="vertical-align: inherit;" id="shipScrapIncome"></font>
-							</font>
-						</td>
-					</tr>
-				</tbody>
-			</table>
+				</b>
+			</td>
+			<td style="padding-left: 0px;padding-right: 0px;background:#">
+					<img width="30" height="30" id="shipNavyIcon">
+					<font style="vertical-align: inherit;" id="shipNavy"></font>
+			</td>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Build Time</font>
+				</b>
+			</td>
+			<td>
+				<font style="vertical-align: inherit;" id="shipBuildTime"></font>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Acquisition</font>
+				</b>
+			</td>
+			<td colspan="4" style="padding-left: 0px;padding-right: 0px">
+					<font style="vertical-align: inherit;" id="shipAcquisition"></font>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Enhance Income</font>
+				</b>
+			</td>
+			<td colspan="4" style="text-align:left;padding-left:10px;">
+				<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>
+			</td>
+		</tr>
+		<tr>
+			<td>
+				<b>
+					<font style="vertical-align: inherit;">Scrap Income</font>
+				</b>
+			</td>
+			<td colspan="4" style="text-align:left;padding-left:10px;">
+				<font style="vertical-align: inherit;" id="shipScrapIncome"></font>
+			</td>
+		</tr>
+	</tbody>
+</table>
 
 
 </div>
