--- a/ship.html
+++ b/ship.html
@@ -377,7 +377,7 @@
 			</td>
 			<td colspan="4" style="text-align:left;height:1px;">
 				<!--<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>-->
-				<table class="wikitablewide" style="width:100%;height:100%;text-align:center;margin:0 0 0 0;">
+				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
 						<td><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
 						<td id="shipEnhancementFirepower"></td>
