--- a/ship.html
+++ b/ship.html
@@ -379,20 +379,20 @@
 				<!--<font style="vertical-align: inherit;" id="shipEnhancementIncome"></font>-->
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
-						<td><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
-						<td id="shipEnhancementFirepower"></td>
+						<td style="width:70%"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
+						<td style="padding-left:5px" id="shipEnhancementFirepower"></td>
 					<tr>
 					<tr>
-						<td><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
-						<td id="shipEnhancementTorpedo"></td>
+						<td style="width:70%"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
+						<td style="padding-left:5px" id="shipEnhancementTorpedo"></td>
 					<tr>
 					<tr>
-						<td><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
-						<td id="shipEnhancementAviation"></td>
+						<td style="width:70%"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
+						<td style="padding-left:5px" id="shipEnhancementAviation"></td>
 					<tr>
 					<tr>
-						<td><img src="https://i.imgur.com/XHoLMQ5.png">&emsp;Reload</td>
-						<td id="shipEnhancementReload"></td>
+						<td style="width:70%"><img src="https://i.imgur.com/XHoLMQ5.png">&emsp;Reload</td>
+						<td style="padding-left:5px" id="shipEnhancementReload"></td>
 					<tr>
 				</table>
 			</td>
