--- a/ship.html
+++ b/ship.html
@@ -401,7 +401,7 @@
 					<font style="vertical-align: inherit;">Scrap Income</font>
 				</b>
 			</td>
-			<td colspan="4" style="text-align:left;padding-left:10px;">
+			<td colspan="4" style="text-align:left;height:1px;">
 				<!--<font style="vertical-align: inherit;" id="shipScrapIncome"></font>-->
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
