--- a/ship.html
+++ b/ship.html
@@ -62,7 +62,10 @@
 			document.getElementById("shipScrapIncomeGold").innerHTML = actual_JSON.scrap.gold; 
 			document.getElementById("shipScrapIncomeOil").innerHTML = actual_JSON.scrap.oil;
 			document.getElementById("shipScrapIncomeMedal").innerHTML = actual_JSON.scrap.medal;
-			document.getElementById("shipReleaseDate").innerHTML = "JP: " + actual_JSON.releaseDate.JP + "<br>CN: " + actual_JSON.releaseDate.CN + "<br>KR: " + actual_JSON.releaseDate.KR + "<br>EN: " + actual_JSON.releaseDate.EN;
+			document.getElementById("shipReleaseDateJP").innerHTML = "JP: " + actual_JSON.releaseDate.JP;
+			document.getElementById("shipReleaseDateCN").innerHTML = "CN: " + actual_JSON.releaseDate.CN;
+			document.getElementById("shipReleaseDateKR").innerHTML = "KR: " + actual_JSON.releaseDate.KR;
+			document.getElementById("shipReleaseDateEN").innerHTML = "EN: " + actual_JSON.releaseDate.EN;
 			document.getElementById("shipVoiceActress").innerHTML = actual_JSON.voiceActress;
 			document.getElementById("shipIllustrator").innerHTML = actual_JSON.artist.name;
 			document.getElementById("shipIllusWeibo").innerHTML = actual_JSON.artist.name;
@@ -379,19 +382,19 @@
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/bDXQQg8.png">&emsp;Firepower</td>
 						<td style="padding-left:5px" id="shipEnhancementFirepower"></td>
-					<tr>
+					</tr>
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/JNDOCmX.png">&emsp;Torpedo</td>
 						<td style="padding-left:5px" id="shipEnhancementTorpedo"></td>
-					<tr>
+					</tr>
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/iy5ZBP3.png">&emsp;Aviation</td>
 						<td style="padding-left:5px" id="shipEnhancementAviation"></td>
-					<tr>
+					</tr>
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/XHoLMQ5.png">&emsp;Reload</td>
 						<td style="padding-left:5px" id="shipEnhancementReload"></td>
-					<tr>
+					</tr>
 				</table>
 			</td>
 		</tr>
@@ -402,20 +405,19 @@
 				</b>
 			</td>
 			<td colspan="4" style="text-align:left;height:1px;">
-				<!--<font style="vertical-align: inherit;" id="shipScrapIncome"></font>-->
 				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/ZYkCzss.png">&emsp;Gold</td>
 						<td style="padding-left:5px" id="shipScrapIncomeGold"></td>
-					<tr>
+					</tr>
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/gGlQE7q.png">&emsp;Oil</td>
 						<td style="padding-left:5px" id="shipScrapIncomeOil"></td>
-					<tr>
+					</tr>
 					<tr>
 						<td style="width:70%"><img src="https://i.imgur.com/ZfY8Jl8.png">&emsp;Medal</td>
 						<td style="padding-left:5px" id="shipScrapIncomeMedal"></td>
-					<tr>
+					</tr>
 				</table>
 			</td>
 		</tr>
@@ -443,8 +445,22 @@
 					<font style="vertical-align: inherit;">Release Date</font>
 				</b>
 			</td>
-			<td>
-					<font style="vertical-align: inherit;" id="shipReleaseDate"></font>
+			<td style="text-align:left;height:1px;">
+				<!--<font style="vertical-align: inherit;" id="shipReleaseDate"></font>-->
+				<table class="wikitablewide" style="width:100%;height:100%;text-align:left;margin:0 0 0 0;">
+					<tr>
+						<td style="padding-left:5px" id="shipReleaseDateJP"></td>
+					</tr>
+					<tr>
+						<td style="padding-left:5px" id="shipReleaseDateCN"></td>
+					</tr>
+					<tr>
+						<td style="padding-left:5px" id="shipReleaseDateKR"></td>
+					</tr>
+					<tr>
+						<td style="padding-left:5px" id="shipReleaseDateEN"></td>
+					</tr>
+				</table>
 			</td>
 		</tr>
 		<tr>
